--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <script src="https://js.pusher.com/7.0.3/pusher.min.js"></script>
+      <link rel="stylesheet" href="./assets/webfonts/inter/inter.css"> 
+      <link rel="stylesheet" href="./assets/css/app.min.css">
     <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/blue/theme-light.css">
     <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/blue/layout-light.css">
 </head>
@@ -26,5 +30,11 @@
         </div>
     </div>
 </app-root>
+<script src="./assets/vendors/jquery/jquery-3.5.0.min.js"></script>
+<script src="./assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="./assets/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="./assets/vendors/svg-inject/svg-inject.min.js"></script>
+<script src="./assets/vendors/modal-stepes/modal-steps.min.js"></script>
+<script src="./assets/js/app.js"></script>
 </body>
 </html>
