se agregaron assets para el login

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,12 @@
             <span class="ball-5"></span>
             <span class="ball-6"></span>
             <span class="ball-7"></span>
-            <span class="ball-8"></span>
+            <span class="ball-8"></span> 
         </div>
     </div>
 </app-root>
 <script src="./assets/vendors/jquery/jquery-3.5.0.min.js"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.js"></script>
 <script src="./assets/vendors/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="./assets/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="./assets/vendors/svg-inject/svg-inject.min.js"></script>
