--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 <script src="./assets/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="./assets/vendors/svg-inject/svg-inject.min.js"></script>
 <script src="./assets/vendors/modal-stepes/modal-steps.min.js"></script>
+<script src="./assets/vendors/emojione/emojionearea.min.js"></script>
 <script src="./assets/js/app.js"></script>
 </body>
 </html>
