--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
    
       <link rel="stylesheet" href="./assets/webfonts/inter/inter.css"> 
       <link rel="stylesheet" href="./assets/css/app.min.css">
