Ajustes para congreso 2025

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,17 @@
       <link rel="stylesheet" href="./assets/webfonts/inter/inter.css"> 
       <link rel="stylesheet" href="./assets/css/app.min.css">
     <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/blue/theme-light.css?v=1.0">
-    <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/blue/layout-light.css">
+    <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/blue/layout-light.css?v=1.2">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-96ENTMH85F"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-96ENTMH85F');
+    </script>
 </head>
 <body>
 <app-root>
