Ajustes Google tag y Sponsors

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-96ENTMH85F');
+    gtag('config', 'G-96ENTMH85F', { send_page_view: false });
     </script>
 </head>
 <body>
